# slambook2

ch2/: CMakeLists.txt  libHelloSLAM.h  useHello.cpp
ch3/examples/: plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt
ch4/: CMakeLists.txt  useSophus.cpp
